# theaunties

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
tests/: conftest.py  test_agent_core.py  test_analyzer.py  test_api.py  test_brave_search.py  test_chat.py  test_collector.py  test_config.py  test_context.py  test_db.py  test_discovery.py  test_doc_generator.py  test_gdrive_generator.py  test_llm_router.py  test_prompts.py  test_scheduler.py
theaunties/: __init__.py  __main__.py  config.py  main.py
theaunties/agent/: analyzer.py  collector.py  context.py  core.py  discovery.py
theaunties/chat/: __init__.py  cli.py  handler.py
theaunties/db/: database.py  models.py
theaunties/llm/: __init__.py  claude.py  gemini.py  router.py
theaunties/output/: __init__.py  gdrive.py
theaunties/prompts/: __init__.py  analysis.py  chat.py  discovery.py  synthesis.py
theaunties/scheduler/: __init__.py  manager.py
